Fixing visibility of footer for overflowing page content

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1,4 +1,7 @@
-footer {
+body{
+  padding-bottom: 65px;
+}
+  footer {
   background-color: $dark-bg-color;
   color: $light-font-color;
   height: 50px;
